@@ -74,12 +74,16 @@ sub xst_printcap_read
     if ($in_spool) {
         if (/[ \t]*:([^=#]+)[#=]*(.*):/) {
             $spools{$spool}{'lpr'}{$1} = $2;
-        } elsif (/.*\\/) {
+        }
+
+        # Look for line continuation.
+        if (/.*\\$/) {
             $in_spool = 1;
         } else {
             $in_spool = 0;
         }
-    } elsif (/^([A-Za-z]+):\\/) {
+    } elsif (/^([A-Za-z0-9]+):\\/) {
+        # Get the spool name.
         $spool = $1;
         $in_spool = 1;
     }
@@ -93,6 +97,7 @@ sub xst_printcap_read
       if (-d ($dir) && -e ($dir . "/filter")) {
           my @known_options;
 
+          # Parse general.cfg.
           $section = "general";
           @known_options = ('DESIRED_TO', 'PAPERSIZE',
                             'PRINTER_TYPE', 'ASCII_TO_PS');
@@ -108,6 +113,7 @@ sub xst_printcap_read
               &xst_report_info (96, "No $dir/$section.cfg");
           }
 
+          # Parse postscript.cfg.
           $section = "postscript";
           @known_options = ('GSDEVICE', 'RESOLUTION',
                             'COLOR', 'PAPERSIZE',
@@ -126,6 +132,7 @@ sub xst_printcap_read
               &xst_report_info (96, "No $dir/$section.cfg");
           }
 
+          # Parse textonly.cfg.
           $section = "textonly";
           @known_options = ('TEXTONLYOPTIONS', 'CRLFTRANS',
                             'TEXT_SEND_EOF');
